--- a/init/init.oplus.rc
+++ b/init/init.oplus.rc
@@ -13,6 +13,9 @@ on fs
     # Update touchpanel firmware in case we ship newer firmware in /odm
     write /proc/touchpanel/tp_fw_update 0
 
+on zygote-start
+    start bspFwUpdate
+
 on early-boot
     # Radio
     exec_start oplus-sh
@@ -106,6 +109,13 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=rndis,diag,adb && pro
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=rndis,none,adb && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/idVendor 0x22D9
     write /config/usb_gadget/g1/idProduct 0x2766
+
+service bspFwUpdate /system_ext/bin/bspFwUpdate
+    class main
+    user system
+    group system
+    disabled
+    oneshot
 
 service oplus-sh /odm/bin/init.oplus.sh
     user root
